--- a/app/assets/stylesheets/me/booking-details.scss
+++ b/app/assets/stylesheets/me/booking-details.scss
@@ -4,6 +4,10 @@
     margin-bottom: 20px;
   }
 
+  .copy-button {
+    margin-right: 30px;
+  }
+
   input.checkbox {
     display: inline-block;
     width: auto;
