add gl code 30350 and codes reference page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -58,3 +58,4 @@ $button-color: #01647C;
 @import 'me/film-rights-new';
 @import 'me/calendar';
 @import 'me/sublicensor-details';
+@import 'me/codes';
