--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
               <ul>
                 <li><a href="/films">Films</a></li>
                 <li><a href="/shorts">Shorts</a></li>
+                <li><a href="/tv_series">TV Series</a></li>
                 <li><a href="/licensors">Licensors</a></li>
                 <li><a href="/calendar">Calendar</a></li>
                 <li><a href="/venues">Venues</a></li>
