--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -91,6 +91,15 @@
     font-size: 14px;
     vertical-align: bottom;
 
+    &.tv {
+      margin-left: 30px;
+      font-size: 11px;
+      @media (min-width: 1450px) {
+        margin-left: 60px;
+        font-size: 14px;
+      }
+    }
+
     .tab {
       float: left;
       background-color: white;
