--- a/app/views/royalty_reports/codes.html.erb
+++ b/app/views/royalty_reports/codes.html.erb
@@ -48,6 +48,8 @@
     <p>50110 → Video</p>
     <p>50111 → Video</p>
     <p>50112 → Video</p>
+    <p>50250 → Club (club films) / SVOD (non-club films)</p>
+    <p>50260 → Club (club films) / SVOD (non-club films)</p>
     <p>50300 → Non-Theatrical</p>
     <p>50360 → Other Internet</p>
     <p>50400 → Ancillary</p>
