add form to change film_rights dates, move create film_rights to separate flux cycle instead of reloading film-details page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,8 @@ $button-color: #01647C;
 @import 'me/general';
 
 @import 'handy-tools/styles/general';
+@import 'handy-tools/styles/admin-layout';
+@import 'handy-tools/styles/admin-table';
 
 @import 'me/current-user-dropdown';
 @import 'me/confirm-delete';
