--- a/app/assets/stylesheets/me/reports-index.scss
+++ b/app/assets/stylesheets/me/reports-index.scss
@@ -14,6 +14,9 @@
     position: absolute;
     top: 12px;
     right: 0;
+    border-radius: 100px;
+    padding: 15px 15px 15px 50px;
+    width: 250px;
   }
 
   th:first-of-type {
