--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -6,3 +6,4 @@
 <div id="languages-index">replace me</div>
 <div id="genres-index">replace me</div>
 <div id="topics-index">replace me</div>
+<div id="merchandise-types-index">replace me</div>
