--- a/app/assets/stylesheets/me/new-thing.scss
+++ b/app/assets/stylesheets/me/new-thing.scss
@@ -80,4 +80,17 @@
       overflow-y: scroll;
     }
   }
+
+  .icons {
+    padding: 0;
+
+    img {
+      margin-top: 34px;
+      cursor: pointer;
+
+      &:first-of-type {
+        margin-right: 5px;
+      }
+    }
+  }
 }
