--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
                 <li><a href="/invoices">Invoices</a></li>
                 <li><a href="/sublicensors">Sublicensors</a></li>
                 <li><a href="/giftboxes">Gift Boxes</a></li>
+                <li><a href="/merchandise_items">Merchandise</a></li>
                 <li><a href="/users">Users</a></li>
                 <li><a href="/royalty_reports">Royalties</a></li>
                 <li><a href="/royalty_reports/codes">GL Codes</a></li>
