--- a/app/assets/stylesheets/me/modal-select.scss
+++ b/app/assets/stylesheets/me/modal-select.scss
@@ -1,6 +1,7 @@
 .modal-select {
 
   .search-box {
+    float: none;
     width: 100%;
     border-radius: 100px;
     padding: 15px 15px 15px 50px;
