--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -61,3 +61,8 @@ $button-color: #01647C;
 @import 'me/calendar';
 @import 'me/sublicensor-details';
 @import 'me/codes';
+
+#admin-sidebar {
+  height: auto !important;
+  min-height: 100% !important;
+}
