--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -139,25 +139,6 @@ body {
       user-select: none;
     }
 
-    .search-box {
-      float: right;
-      margin-right: 30px;
-      border-radius: 100px;
-      padding: 15px 15px 15px 50px;
-      width: 250px;
-      background-image: asset-data-url("magnifying-glass.png");
-      background-repeat: no-repeat;
-      background-position: 15px 11px;
-
-      &:focus {
-        outline: none;
-      }
-
-      &.no-margin {
-        margin-right: 0;
-      }
-    }
-
     .white-box {
       background: #FFFFFF;
       padding: 36px 32px;
@@ -296,7 +277,7 @@ body {
     cursor: -moz-grabbing !important;
   }
 
-  table.admin-table {
+  table.fm-admin-table {
     width: 100%;
 
     thead {
