--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,8 +45,11 @@
                 <li><a href="/merchandise_items">Merchandise</a></li>
                 <li><a href="/users">Users</a></li>
                 <li><a href="/royalty_reports">Royalties</a></li>
-                <li><a href="/convert">Convert Digital Sales</a></li>
                 <li><a href="/royalty_reports/codes">GL Codes</a></li>
+                <hr />
+                <li><a href="/convert">Convert Digital Sales</a></li>
+                <li><a href="/aliases">Aliases</a></li>
+                <hr />
                 <li><a href="/settings">Settings</a></li>
                 <% if current_user.email == "peter@filmmovement.com" %>
                   <li><a href="/import">Import Data Files</a></li>
