--- a/app/views/convert/show.html.erb
+++ b/app/views/convert/show.html.erb
@@ -9,6 +9,17 @@
     <p>(The first row will not be imported)</p>
   </div>
   <strong>
-  <%= f.file_field :spreadsheet %>
+  <br />
+  <label for="retailer-field">Digital Retailer</label>
+  <select name="user[digital_retailer_id]">
+    <% DigitalRetailer.all.order(:name).each do |dr| %>
+      <option value="<%= dr.id %>"><%= dr.name %></option>
+    <% end %>
+  </select><br />
+  <br />
+  <label for="date-field">Invoice Date</label>
+  <input id="date-field" name="user[date]" type="date" value="<%= Date.today %>" /><br />
+  <br />
+  <%= f.file_field :spreadsheet %><br />
   <input type="submit" />
 <% end %>
