add invoice number to digital retailer sales job

--- a/app/views/convert/show.html.erb
+++ b/app/views/convert/show.html.erb
@@ -17,6 +17,9 @@
     <% end %>
   </select><br />
   <br />
+  <label for="number-field">Invoice Number</label>
+  <input id="number-field" name="user[invoice_number]" /><br />
+  <br />
   <label for="date-field">Invoice Date</label>
   <input id="date-field" name="user[date]" type="date" value="<%= Date.today %>" /><br />
   <br />
