add access column on users table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <body>
       <div id="current-user">
         <span id="id"><%= current_user ? current_user.id : "" %></span>
-        <span id="admin"><%= current_user ? current_user.admin : "" %></span>
+        <span id="access"><%= current_user ? current_user.access : "" %></span>
       </div>
       <div id="admin-framework">
         <div id="admin-row" class="row">
