display add/delete film buttons based on access

--- a/app/assets/stylesheets/me/films-index.scss
+++ b/app/assets/stylesheets/me/films-index.scss
@@ -4,7 +4,7 @@
     color: red;
   }
 
-  .advanced-button, .metadata-button {
-    margin-right: 20px;
+  .clearfix a {
+    margin-left: 20px;
   }
 }
