restrict access to royalty reports

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,8 +44,10 @@
                 <li><a href="/giftboxes">Gift Boxes</a></li>
                 <li><a href="/merchandise_items">Merchandise</a></li>
                 <li><a href="/users">Users</a></li>
-                <li><a href="/royalty_reports">Royalties</a></li>
-                <li><a href="/royalty_reports/codes">GL Codes</a></li>
+                <% if current_user.access == "super_admin" %>
+                  <li><a href="/royalty_reports">Royalties</a></li>
+                  <li><a href="/royalty_reports/codes">GL Codes</a></li>
+                <% end %>
                 <hr />
                 <li><a href="/convert">Convert Digital Sales</a></li>
                 <li><a href="/aliases">Aliases</a></li>
