--- a/app/views/royalty_reports/index.html.erb
+++ b/app/views/royalty_reports/index.html.erb
@@ -3,4 +3,5 @@
   <div id="sage-import-label" class="hidden"><%= flash[:label].capitalize %></div>
   <div id="sage-import-quarter" class="hidden"><%= flash[:quarter] %></div>
 <% end %>
+<div id="jobs-index"></div>
 <div id="reports-index">replace me</div>
