tweak film quote padding

--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -242,6 +242,7 @@
       border: solid 1px #E4E9ED;
       border-radius: 3px;
       padding: 15px;
+      padding-right: 80px;
       cursor: pointer;
 
       p:first-of-type {
