--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -142,6 +142,13 @@
     margin-bottom: 30px;
   }
 
+  .wordcount {
+    margin-top: -20px;
+    font-size: 11px;
+    text-align: right;
+    margin-bottom: 30px;
+  }
+
   a#delete {
     float: right;
     margin-left: 30px;
