change word count to character count

--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -142,7 +142,7 @@
     margin-bottom: 30px;
   }
 
-  .wordcount {
+  .character-count {
     margin-top: -20px;
     font-size: 11px;
     text-align: right;
