tests that sage revenue/expenses are imported properly

--- a/app/views/royalty_reports/codes.html.erb
+++ b/app/views/royalty_reports/codes.html.erb
@@ -26,17 +26,18 @@
   </div>
   <h1>Expenses</h1>
   <div>
+    <p>40041 → Video</p>
+    <p>40042 → Video</p>
     <p>40051 → Video</p>
     <p>40061 → Video</p>
     <p>40063 → Video</p>
     <p>40064 → Video</p>
     <p>40070 → Non-Theatrical</p>
-    <p>40041 → Video</p>
-    <p>40042 → Video</p>
     <p>40071 → Theatrical (theatrical rights) / TVOD (no theatrical rights)</p>
     <p>40078 → Theatrical</p>
     <p>40080 → Theatrical</p>
     <p>40086 → Theatrical</p>
+    <p>40090 → Non-Theatrical</p>
     <p>40092 → Theatrical</p>
     <p>47000 → Television</p>
     <p>48200 → Other Internet</p>
