--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
 
 $highlight-color: #01647C;
 $button-color: #01647C;
+$imgpath: 'handy-components/images';
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
