--- a/app/assets/stylesheets/me/films-index.scss
+++ b/app/assets/stylesheets/me/films-index.scss
@@ -7,4 +7,46 @@
   .clearfix a {
     margin-left: 20px;
   }
+
+  a {
+    padding: 12px 20px;
+    min-width: inherit;
+    border-radius: 5px;
+
+    &.green {
+      background-color: green;
+    }
+  }
+}
+
+.films-index-filter {
+  padding: 30px;
+
+  .checkbox-list {
+    border: 1px solid #E4E9ED;
+    border-radius: 3px;
+    height: 253px;
+    margin-bottom: 30px;
+    overflow-y: scroll;
+
+    label {
+      font-family: 'TeachableSans-SemiBold';
+      color: black;
+      margin-right: 10px;
+      margin-left: 20px;
+    }
+
+    [type="checkbox"] {
+      margin-right: 10px;
+      margin-left: 20px;
+    }
+
+    .checkbox-container:first-of-type [type="checkbox"] {
+      margin-top: 20px;
+    }
+
+    .checkbox-container:last-of-type [type="checkbox"] {
+      margin-bottom: 20px;
+    }
+  }
 }
