--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -2,6 +2,10 @@ html {
   height: 100%;
 }
 
+.spacer {
+  height: 103px;
+}
+
 .select-scroll .nice-select ul {
   height: 400px;
   overflow-y: scroll;
