fix new film close modal bug, films_index feature tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
       </div>
       <div id="admin-framework">
         <div id="admin-row" class="row">
-          <div id="admin-sidebar" class="col-xs-2 match-height-layout">
+          <div id="admin-sidebar-background" class="col-xs-2"></div>
+          <div id="admin-sidebar" class="col-xs-2">
             <div id="admin-sidebar-header"></div>
             <div id="admin-sidebar-body">
               <ul>
@@ -56,7 +57,7 @@
               </ul>
             </div>
           </div>
-          <div id="admin-right-column" class="col-xs-10 match-height-layout">
+          <div id="admin-right-column" class="col-xs-10">
             <nav id="admin-navbar" class="clearfix">
               <div id="admin-navbar-menu">
                 <div id="current-user-dropdown">
