redo crossed films statement header

--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -206,7 +206,7 @@
   .row-of-checkboxes {
 
     label.checkbox {
-      margin-top: 0;
+      margin-top: 0 !important;
     }
 
     .no-field-error {
