--- a/app/assets/stylesheets/me/report-details.scss
+++ b/app/assets/stylesheets/me/report-details.scss
@@ -1,5 +1,25 @@
 #royalty-details {
 
+  .crossed-statement-header {
+    background-color: white;
+    color: black;
+    font-size: 18px;
+    padding: 36px 32px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+
+    a {
+      display: inline-block;
+      width: calc(100% / 3);
+      font-size: 12px;
+      margin-bottom: 10px;
+    }
+
+    #export-uncrossed {
+      margin-top: 20px;
+    }
+  }
+
   h1, h3, h4 {
     display: block;
     text-align: center;
