credit memos index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
                 <li><a href="/shipping_addresses">DVD Ship Addresses</a></li>
                 <li><a href="/purchase_orders">DVD POs</a></li>
                 <li><a href="/returns">DVD Returns</a></li>
+                <li><a href="/credit_memos">Credit Memos</a></li>
                 <li><a href="/dvd_reports">DVD Reports</a></li>
                 <li><a href="/catalog">Catalog</a></li>
                 <li><a href="/invoices">Invoices</a></li>
