--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,6 +56,7 @@ $imgpath: 'handy-components/images';
 @import 'me/shipping-address-details';
 @import 'me/invoices-index';
 @import 'me/invoice-details';
+@import 'me/credit-memos-index';
 @import 'me/dvd-reports';
 @import 'me/return-details';
 @import 'me/venue-details';
