credit memo details

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,6 +57,7 @@ $imgpath: 'handy-components/images';
 @import 'me/invoices-index';
 @import 'me/invoice-details';
 @import 'me/credit-memos-index';
+@import 'me/credit-memo-details';
 @import 'me/dvd-reports';
 @import 'me/return-details';
 @import 'me/venue-details';
