--- a/app/views/royalty_reports/codes.html.erb
+++ b/app/views/royalty_reports/codes.html.erb
@@ -52,6 +52,7 @@
     <p>50250 → Club (club films) / SVOD (non-club films)</p>
     <p>50260 → Club (club films) / SVOD (non-club films)</p>
     <p>50300 → Non-Theatrical</p>
+    <p>50320 → Digital Publicity</p>
     <p>50360 → Other Internet</p>
     <p>50400 → Ancillary</p>
     <p>60100 → Theatrical (theatrical rights) / TVOD (no theatrical rights)</p>
