extract import inventory button

--- a/app/views/purchase_orders/index.html.erb
+++ b/app/views/purchase_orders/index.html.erb
@@ -1,4 +1,5 @@
 <% if flash[:inventory_import_id] %>
   <div id="inventory-import-id" class="hidden"><%= flash[:inventory_import_id] %></div>
 <% end %>
+<div id="import-inventory">replace me</div>
 <div id="purchase-orders-index">replace me</div>
