--- a/app/views/sublicensors/show.html.erb
+++ b/app/views/sublicensors/show.html.erb
@@ -1,6 +1,7 @@
 <% if @sublicensor %>
 
   <div id="sublicensor-details">replace me</div>
+  <div id="sublicensor-rights-index">replace me</div>
 
 <% else %>
 
