use simple details for digital retailer film details

--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -36,6 +36,10 @@ html {
 
 a.standard-link {
   text-decoration: underline;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .nice-select.three-options ul {
