--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -1,5 +1,6 @@
 <div id="setting-details">replace me</div>
 <div id="digital-retailers-index">replace me</div>
+<div id="edu-platforms-index">replace me</div>
 <div id="territories-index">replace me</div>
 <div id="formats-index">replace me</div>
 <div id="countries-index">replace me</div>
