edu platform films crud

--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -308,7 +308,7 @@
     }
   }
 
-  .digital-retailers-table {
+  .digital-retailers-table, .edu-platforms-table {
 
     th:first-of-type {
       width: 200px;
