delete mix-ins, etc.

--- a/app/assets/stylesheets/me/licensor-details.scss
+++ b/app/assets/stylesheets/me/licensor-details.scss
@@ -1,22 +1,4 @@
-#licensor-details {
-
-  input {
-    width: 100%;
-  }
-
-  .noFieldError {
-    margin-bottom: 30px;
-  }
-
-  .yesFieldError {
-    margin-top: 10px;
-    height: 10px;
-    margin-bottom: 40px;
-  }
-
-  textarea {
-    margin-bottom: 30px;
-  }
+.licensor-details {
 
   table {
     margin-bottom: 60px;
@@ -24,9 +6,5 @@
     .name-column {
       color: #5F5F5F;
     }
-  }
-
-  a#delete {
-    float: right;
   }
 }
