delete button - no border when disabled

--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -281,6 +281,7 @@ body {
   .btn.disabled {
     background-color: #D8CDC5;
     color: rgb(95, 95, 95);
+    border: none;
   }
 
   .dotted-box {
