--- a/app/assets/javascripts/me/images.js.erb
+++ b/app/assets/javascripts/me/images.js.erb
@@ -5,5 +5,7 @@ Images = {
   openModal: "<%= image_path('open-modal.png') %>",
   spinner: "<%= image_path('ajax-loader.svg') %>",
   shredder: "<%= image_path('shredder.png') %>",
-  edit: "<%= image_path('edit.svg') %>"
+  edit: "<%= image_path('edit.svg') %>",
+  triangle: "<%= image_path('drop-down-triangle.png') %>",
+  profileDummy: "<%= image_path('profile-dummy.png') %>",
 }
