--- a/app/assets/javascripts/me/images.js.erb
+++ b/app/assets/javascripts/me/images.js.erb
@@ -1,11 +1,12 @@
 Images = {
+  arrow: "<%= image_path('arrow.svg') %>",
   attention: "<%= image_path('attention.png') %>",
   blackPlus: "<%= image_path('black-plus.png') %>",
+  edit: "<%= image_path('edit.svg') %>",
   handle: "<%= image_path('handle.png') %>",
   openModal: "<%= image_path('open-modal.png') %>",
-  spinner: "<%= image_path('ajax-loader.svg') %>",
-  shredder: "<%= image_path('shredder.png') %>",
-  edit: "<%= image_path('edit.svg') %>",
-  triangle: "<%= image_path('drop-down-triangle.png') %>",
   profileDummy: "<%= image_path('profile-dummy.png') %>",
+  shredder: "<%= image_path('shredder.png') %>",
+  spinner: "<%= image_path('ajax-loader.svg') %>",
+  triangle: "<%= image_path('drop-down-triangle.png') %>",
 }
