--- a/app/assets/stylesheets/me/reset.scss
+++ b/app/assets/stylesheets/me/reset.scss
@@ -1,43 +1,43 @@
-body {
-  font-family: 'TeachableSans-Regular', sans-serif;
-  font-size: 12px;
-  letter-spacing: 1.08px;
-}
+// body {
+//   font-family: 'TeachableSans-Regular', sans-serif;
+//   font-size: 12px;
+//   letter-spacing: 1.08px;
+// }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  font-weight: normal;
-}
+// h1, h2, h3, h4, h5, h6 {
+//   margin: 0;
+//   font-weight: normal;
+// }
 
-ul {
-  padding: 0;
-  margin: 0;
-}
+// ul {
+//   padding: 0;
+//   margin: 0;
+// }
 
-li {
-  list-style: none;
-}
+// li {
+//   list-style: none;
+// }
 
-a, a:hover {
-  color: inherit;
-  text-decoration: inherit;
-}
+// a, a:hover {
+//   color: inherit;
+//   text-decoration: inherit;
+// }
 
-p {
-  margin: 0;
-}
+// p {
+//   margin: 0;
+// }
 
 img {
   -webkit-user-drag: none;
 }
 
-button {
-  padding: 0;
-}
+// button {
+//   padding: 0;
+// }
 
-*:focus {
-  outline: none;
-}
+// *:focus {
+//   outline: none;
+// }
 
 input, .nice-select, textarea {
   border: 1px solid #E4E9ED;
@@ -62,9 +62,9 @@ textarea {
   width: 100%;
 }
 
-label {
-  font-weight: normal;
-}
+// label {
+//   font-weight: normal;
+// }
 
 .error {
   border: 1px solid red;
