--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -42,3 +42,9 @@ a.square-button {
         padding-left: 0 !important;
     }
 }
+
+.grabbing {
+    cursor: grabbing !important;
+    cursor: -webkit-grabbing !important;
+    cursor: -moz-grabbing !important;
+}
