--- a/app/assets/stylesheets/me/in-theaters.scss
+++ b/app/assets/stylesheets/me/in-theaters.scss
@@ -1,47 +1,47 @@
-#in-theaters-index {
+// #in-theaters-index {
 
-  a.blue-outline-button:not(:last-of-type) {
-    margin-bottom: 30px;
-  }
+//   a.blue-outline-button:not(:last-of-type) {
+//     // margin-bottom: 30px;
+//   }
 
-  .fm-admin-table {
-    margin-bottom: 11px;
+//   .fm-admin-table {
+//     // margin-bottom: 11px;
 
-    tr.highlight {
-      background-color: #CED8F6;
-    }
+//     // tr.highlight {
+//     //   background-color: #CED8F6;
+//     // }
 
-    .top-drop-zone, .drop-zone {
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 11px;
-      border-radius: 5px;
+//     // .top-drop-zone, .drop-zone {
+//     //   position: absolute;
+//     //   left: 0;
+//     //   width: 100%;
+//     //   height: 11px;
+//     //   border-radius: 5px;
 
-      &.highlight {
-        border: dashed 1px black;
-      }
-    }
+//     //   &.highlight {
+//     //     border: dashed 1px black;
+//     //   }
+//     // }
 
-    .top-drop-zone {
-      top: -5px;
-    }
+//     // .top-drop-zone {
+//     //   top: -5px;
+//     // }
 
-    .drop-zone {
-      top: 31px;
-    }
+//     // .drop-zone {
+//     //   top: 31px;
+//     // }
 
-    .indent {
-      color: #5F5F5F;
+//   //   .indent {
+//   //     color: #5F5F5F;
 
-      .handle {
-        position: absolute;
-        top: 12px;
-        right: 50px;
-        cursor: grab;
-        cursor: -webkit-grab;
-        cursor: -moz-grab;
-      }
-    }
-  }
-}
+//   //     .handle {
+//   //       position: absolute;
+//   //       top: 12px;
+//   //       right: 50px;
+//   //       cursor: grab;
+//   //       cursor: -webkit-grab;
+//   //       cursor: -moz-grab;
+//   //     }
+//   //   }
+//   // }
+// }
